--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,10 +2,14 @@
 {% block body %}
 <table class="table table-striped">
     <tr><th>Melon Name</th><th>Quantity</th><th>Price</th><th>Total</th></tr>
-    <tr><td>Ancient Watermelon</td><td>5</td><td>$3.00</td><td>$15.00</td></tr>
+ <!--    <tr><td>Ancient Watermelon</td><td>5</td><td>$3.00</td><td>$15.00</td></tr>
     <tr><td>Charleston Gray Watermelon</td><td>2</td><td>$2.00</td><td>$4.00</td></tr>
     <tr><td>Crenshaw</td><td>1</td><td>$2.00</td><td>$2.00</td></tr>
-    <tr><td>Ledmon Watermelon</td><td>2</td><td>$3.00</td><td>$6.00</td></tr>
+    <tr><td>Ledmon Watermelon</td><td>2</td><td>$3.00</td><td>$6.00</td></tr> -->
+    <!-- replaced by an if statement to "read" the rows of melon details in the -->
+    <!-- passed parameter "melons" -->
+    <!-- the if statement example from the lab's white board would be placed here -->
+    <!-- and the lines / rows displayed on the cart. -->
 </table>
 <h3>Total: $27.00</h3>
 <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
