--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,16 +1,28 @@
 {% extends 'base.html' %}
 {% block body %}
+
+
+{% set total_order_amt = 0 %}
 <table class="table table-striped">
-    <tr><th>Melon Name</th><th>Quantity</th><th>Price</th><th>Total</th></tr>
- <!--    <tr><td>Ancient Watermelon</td><td>5</td><td>$3.00</td><td>$15.00</td></tr>
-    <tr><td>Charleston Gray Watermelon</td><td>2</td><td>$2.00</td><td>$4.00</td></tr>
-    <tr><td>Crenshaw</td><td>1</td><td>$2.00</td><td>$2.00</td></tr>
-    <tr><td>Ledmon Watermelon</td><td>2</td><td>$3.00</td><td>$6.00</td></tr> -->
-    <!-- replaced by an if statement to "read" the rows of melon details in the -->
-    <!-- passed parameter "melons" -->
-    <!-- the if statement example from the lab's white board would be placed here -->
-    <!-- and the lines / rows displayed on the cart. -->
+
+	{{ melons }}
+<tr><th>Melon Name</th><th>Quantity</th><th>Price</th><th>Total</th></tr>
+{% for line in melons %}
+{% with (name, quantity, price, total) = line %}
+<tr>
+<td>{{ name }}</td><td>{{ quantity }}</td><td>{{ price }}</td><td>{{ total }}</td>
+{% set total_order_amt = total_order_amt + total %}
+<td>{{ total_order_amt }}</td>
+</tr>
+{{"1  line[3] = " }}{{ line[3] }} 
+{{"1.1  total_order_amt = "}}{{ total_order_amt  }} {{"\n"}}
+{% endwith %}
+
+{{"2 Trying to add two variables "}} {{ (total_order_amt + line[3]) }} 
+{% endfor %}
+
 </table>
-<h3>Total: $27.00</h3>
+<h3>Total: {{ total_order_amt }} {{ " trying to print a total order amount"}}</h3>
 <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 {% endblock %}
+
